# nagl-mbis

./: .gitattributes  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yaml  Lint.yaml
devtools/conda-envs/: env.yaml
naglmbis/: __init__.py  _version.py  utils.py
naglmbis/data/models/charge/: mbis_charges_v1.ckpt  nagl-v1-mbis-dipole.ckpt  nagl-v1-mbis.ckpt
naglmbis/data/models/volume/: mbis_volumes_v1.ckpt
naglmbis/features/: __init__.py  atom.py
naglmbis/models/: __init__.py  base_model.py  models.py
naglmbis/plugins/: __init__.py  bccs.py  plugins.py  trained_models.py  utils.py
naglmbis/tests/: conftest.py  test_atom_features.py  test_models.py  test_plugins.py
scripts/dataset/: analysis_train_val_test_split.py  setup_labeled_data.py  split_by_deepchem.py
scripts/training/: train_model.py
