[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "naglmbis"
description = "A collection of models to predict conformation independent MBIS charges and volumes of molecules, built on the [NAGL](https://github.com/SimonBoothroyd/nagl) package by SimonBoothroyd."
authors = [ {name = "Joshua Horton"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

#[project.entry-points."openff.toolkit.plugins.handlers"]
#NAGLMBIS = "naglmbis.plugins:NAGLMBISHandler"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "naglmbis.__version__"}

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.versioneer]
# Automatic version numbering scheme
VCS = "git"
style = "pep440"
versionfile_source = "naglmbis/_version.py"
versionfile_build = "naglmbis/_version.py"
tag_prefix = 'naglmbis-'

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "W503"]
select = ["B","C","E","F","W","T4","B9"]

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ = .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]